--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build:prod": "webpack --mode production",
     "build:dev": "webpack --mode development",
+    "build": "vite build --outDir=docs --base=./",
     "dev": "webpack-dev-server --mode development --open",
     "start": "webpack-dev-server --mode development --open",
     "test": "npm run build:prod && ex-test -d ./dist -t ./test/test.js"
@@ -37,6 +38,7 @@
     "copy-webpack-plugin": "10.2.0",
     "ts-loader": "9.2.6",
     "typescript": "4.5.4",
+    "vite": "^5.2.8",
     "webpack": "5.88.2",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "4.15.1"
